# Text_Message_Bot

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  docker-run.bat  docker-run.sh  main.py  main_webhook.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  filters.py  handlers.py
database/: __init__.py  db_manager.py  models.py
extractor/: __init__.py  llm_extractor.py  models.py  pattern_matcher.py
monitoring/: __init__.py  health_check.py  metrics.py
security/: __init__.py  rate_limiter.py  validator.py
services/: __init__.py  calendar_service.py  task_service.py
tests/: __init__.py  conftest.py  test_database.py  test_filters.py  test_handlers.py  test_pattern_matcher.py
utils/: __init__.py  auth.py  cache.py  circuit_breaker.py  config.py  dead_letter_queue.py  logger.py
